--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 ---
 layout: default
 ---
-<!DOCTYPE html> 
-<html lang="de"> 
-<head> 
-    <meta charset="utf-8"/> 
-    <title>HTML5 Geolocation Beispiel</title>
-</head>
-
-<body>
-    <div id="pos">
+<div id="pos" style="width:800px; height:600px;">
         Deine Position wird ermittelt...
     </div>
     
     <script>
+        function initialize(coords) {
+            var latlng = new google.maps.LatLng(coords.latitude, coords.longitude);
+            var myOptions = {
+                zoom: 8,
+                center: latlng,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            var map = new google.maps.Map(document.getElementById("pos"), myOptions);
+            
+            var marker = new google.maps.Marker({
+                position: latlng, 
+                map: map, 
+                title: "Hier bist du :)"
+            }); 
+        }
+  
         navigator.geolocation.getCurrentPosition(function(position){ 
-            document.getElementById('pos').innerHTML = 'Latitude: '+position.coords.latitude+' / Longitude: '+position.coords.longitude;
+            initialize(position.coords);
         }, function(){
             document.getElementById('pos').innerHTML = 'Deine Position konnte leider nicht ermittelt werden';
         });
     </script>
-</body>
-</html>
