--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 ---
 layout: default
 ---
-<div id="pos" style="width:800px; height:600px;">
+
+<!DOCTYPE html> 
+<html lang="de"> 
+<head> 
+    <meta charset="utf-8"/> 
+    <title>HTML5 Geolocation Beispiel mit Hilfe von Google Maps</title>
+    
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+</head>
+
+<body>
+    <div id="pos" style="width:800px; height:600px;">
         Deine Position wird ermittelt...
     </div>
     
@@ -28,3 +39,5 @@ layout: default
             document.getElementById('pos').innerHTML = 'Deine Position konnte leider nicht ermittelt werden';
         });
     </script>
+</body>
+</html>
