--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 layout: default
 ---
 
+ <div id="pos">
+        Deine Position wird ermittelt...
+    </div>
+    
+    <script>
+        navigator.geolocation.getCurrentPosition(function(position){ 
+            document.getElementById('pos').innerHTML = 'Latitude: '+position.coords.latitude+' / Longitude: '+position.coords.longitude;
+        }, function(){
+            document.getElementById('pos').innerHTML = 'Deine Position konnte leider nicht ermittelt werden';
+        });
+    </script>
